name:                prog68
version:             0.1.0.0
synopsis:            Programming course web page
description:         Programming course web page
license:             AGPL-3
license-file:        LICENSE
author:              Abby Henríquez Tejera
maintainer:          paradoja@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     CompressJsCompiler
  build-depends:       base >=4.7 && <5
                     , hjsmin
                     , text >= 1.1.0.0
                     , bytestring >= 0.10.4.0
                     , hakyll == 4.6.*
  hs-source-dirs:      libraries
  default-language:    Haskell2010

executable site
  main-is:             site.hs
  build-depends:       base >= 4.7 && <4.8
                     , prog68
                     , hakyll == 4.6.*
                     , clay
  ghc-options:         -threaded
  default-language:    Haskell2010
